--- a/ICGVideoTrimmer/Base.lproj/Main.storyboard
+++ b/ICGVideoTrimmer/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="NO" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <development version="7000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,18 +18,18 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GF0-OD-nYr" userLabel="View - Player">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GF0-OD-nYr" userLabel="View - Player">
                                 <rect key="frame" x="0.0" y="118" width="375" height="418"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NFN-te-fPQ" userLabel="View - Video Layer">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NFN-te-fPQ" userLabel="View - Video Layer">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="418"/>
-                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="NFN-te-fPQ" secondAttribute="trailing" id="2G7-Vz-3yC"/>
                                     <constraint firstItem="NFN-te-fPQ" firstAttribute="leading" secondItem="GF0-OD-nYr" secondAttribute="leading" id="3kr-Ev-wNy"/>
@@ -34,22 +37,22 @@
                                     <constraint firstItem="NFN-te-fPQ" firstAttribute="top" secondItem="GF0-OD-nYr" secondAttribute="top" id="j4F-s2-rdZ"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="orR-Nb-icn" customClass="ICGVideoTrimmerView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orR-Nb-icn" customClass="ICGVideoTrimmerView">
                                 <rect key="frame" x="0.0" y="567" width="375" height="100"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="x4j-N3-Ar5"/>
                                 </constraints>
                             </view>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dww-6T-6Dy">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dww-6T-6Dy">
                                 <rect key="frame" x="255" y="80" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BnU-Fb-06e"/>
                                     <constraint firstAttribute="width" constant="100" id="kvn-MV-Jue"/>
                                 </constraints>
                                 <state key="normal" title="Trim it!">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="trimVideo:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="X4Z-ys-lkT"/>
@@ -62,40 +65,48 @@
                                     <constraint firstAttribute="height" constant="30" id="j0n-F9-6gE"/>
                                 </constraints>
                                 <state key="normal" title="Change position">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="changeTrimPosition:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ccR-f2-OXa"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ro0-7V-UNL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ro0-7V-UNL">
                                 <rect key="frame" x="111" y="40" width="154" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="01F-h7-tCe"/>
                                     <constraint firstAttribute="width" constant="154" id="cuP-7i-zQn"/>
                                 </constraints>
                                 <state key="normal" title="Select Asset">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="selectAsset:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7gP-Di-J1R"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMI-Jb-dWx">
+                                <rect key="frame" x="166" y="544" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="orR-Nb-icn" secondAttribute="bottom" id="0iP-7R-9tu"/>
                             <constraint firstItem="orR-Nb-icn" firstAttribute="top" secondItem="GF0-OD-nYr" secondAttribute="bottom" constant="31" id="1RM-Kb-sIa"/>
                             <constraint firstAttribute="trailing" secondItem="orR-Nb-icn" secondAttribute="trailing" id="6fS-lf-SuO"/>
                             <constraint firstItem="orR-Nb-icn" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="6ic-Sp-VaJ"/>
+                            <constraint firstItem="zMI-Jb-dWx" firstAttribute="centerX" secondItem="orR-Nb-icn" secondAttribute="centerX" id="9Jg-Rq-XPV"/>
                             <constraint firstItem="GF0-OD-nYr" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="Atf-cu-6DT"/>
                             <constraint firstItem="Ro0-7V-UNL" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="BML-vX-hZT"/>
                             <constraint firstAttribute="trailing" secondItem="GF0-OD-nYr" secondAttribute="trailing" id="DOv-fl-TfK"/>
                             <constraint firstItem="gQR-Cf-JNR" firstAttribute="top" secondItem="Ro0-7V-UNL" secondAttribute="bottom" constant="10" id="NER-Q5-N42"/>
                             <constraint firstItem="GF0-OD-nYr" firstAttribute="top" secondItem="gQR-Cf-JNR" secondAttribute="bottom" constant="8" id="TrJ-iX-SBT"/>
                             <constraint firstItem="GF0-OD-nYr" firstAttribute="top" secondItem="dww-6T-6Dy" secondAttribute="bottom" constant="8" id="WQy-NZ-Tpa"/>
+                            <constraint firstItem="orR-Nb-icn" firstAttribute="top" secondItem="zMI-Jb-dWx" secondAttribute="bottom" constant="2" id="Z6a-YS-8ib"/>
                             <constraint firstAttribute="trailing" secondItem="dww-6T-6Dy" secondAttribute="trailing" constant="20" id="e6s-Or-l6q"/>
                             <constraint firstItem="gQR-Cf-JNR" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="loy-Ww-ygG"/>
                             <constraint firstItem="Ro0-7V-UNL" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="tlA-kh-XWg"/>
@@ -104,6 +115,7 @@
                     </view>
                     <connections>
                         <outlet property="changePositionButton" destination="gQR-Cf-JNR" id="5Ao-6s-IkT"/>
+                        <outlet property="infoLabel" destination="zMI-Jb-dWx" id="5X5-mM-zzq"/>
                         <outlet property="trimButton" destination="dww-6T-6Dy" id="8zz-VP-XIK"/>
                         <outlet property="trimmerView" destination="orR-Nb-icn" id="JAL-XW-gzL"/>
                         <outlet property="videoLayer" destination="NFN-te-fPQ" id="vT6-kQ-4A1"/>
