--- a/ICGVideoTrimmer/Base.lproj/Main.storyboard
+++ b/ICGVideoTrimmer/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GF0-OD-nYr" userLabel="View - Player">
-                                <rect key="frame" x="0.0" y="98" width="667" height="150"/>
+                                <rect key="frame" x="0.0" y="98" width="667" height="149"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="NFN-te-fPQ" userLabel="View - Video Layer">
-                                        <rect key="frame" x="200" y="0.0" width="267" height="150"/>
+                                        <rect key="frame" x="201" y="0.0" width="265" height="149"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="NFN-te-fPQ" secondAttribute="height" multiplier="16:9" id="Kqf-Wf-X5F"/>
@@ -43,7 +43,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orR-Nb-icn" customClass="ICGVideoTrimmerView">
-                                <rect key="frame" x="0.0" y="279" width="667" height="96"/>
+                                <rect key="frame" x="0.0" y="271" width="667" height="96"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="96" id="x4j-N3-Ar5"/>
@@ -92,7 +92,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMI-Jb-dWx">
-                                <rect key="frame" x="312.5" y="256" width="42" height="21"/>
+                                <rect key="frame" x="312.5" y="248" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -100,8 +100,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.12910864637305697" green="0.12910864637305697" blue="0.12910864637305697" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="orR-Nb-icn" secondAttribute="bottom" id="0iP-7R-9tu"/>
-                            <constraint firstItem="orR-Nb-icn" firstAttribute="top" secondItem="GF0-OD-nYr" secondAttribute="bottom" constant="31" id="1RM-Kb-sIa"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="orR-Nb-icn" secondAttribute="bottom" constant="8" id="0iP-7R-9tu"/>
+                            <constraint firstItem="orR-Nb-icn" firstAttribute="top" secondItem="GF0-OD-nYr" secondAttribute="bottom" constant="24" id="1RM-Kb-sIa"/>
                             <constraint firstAttribute="trailing" secondItem="orR-Nb-icn" secondAttribute="trailing" id="6fS-lf-SuO"/>
                             <constraint firstItem="orR-Nb-icn" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="6ic-Sp-VaJ"/>
                             <constraint firstItem="zMI-Jb-dWx" firstAttribute="centerX" secondItem="orR-Nb-icn" secondAttribute="centerX" id="9Jg-Rq-XPV"/>
