--- a/ICGVideoTrimmer/Base.lproj/Main.storyboard
+++ b/ICGVideoTrimmer/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="landscape">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,14 +18,14 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GF0-OD-nYr" userLabel="View - Player">
-                                <rect key="frame" x="0.0" y="98" width="667" height="149"/>
+                                <rect key="frame" x="0.0" y="118" width="375" height="399"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="NFN-te-fPQ" userLabel="View - Video Layer">
-                                        <rect key="frame" x="201" y="0.0" width="265" height="149"/>
+                                        <rect key="frame" x="0.0" y="94" width="375" height="211"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="NFN-te-fPQ" secondAttribute="height" multiplier="16:9" id="Kqf-Wf-X5F"/>
@@ -43,14 +43,14 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orR-Nb-icn" customClass="ICGVideoTrimmerView">
-                                <rect key="frame" x="0.0" y="271" width="667" height="96"/>
+                                <rect key="frame" x="0.0" y="541" width="375" height="96"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="96" id="x4j-N3-Ar5"/>
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dww-6T-6Dy">
-                                <rect key="frame" x="547" y="60" width="100" height="30"/>
+                                <rect key="frame" x="255" y="80" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BnU-Fb-06e"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="kvn-MV-Jue"/>
@@ -64,7 +64,7 @@
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQR-Cf-JNR">
-                                <rect key="frame" x="20" y="60" width="113" height="30"/>
+                                <rect key="frame" x="20" y="80" width="113" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="113" id="3M2-Y6-wTf"/>
                                     <constraint firstAttribute="height" constant="30" id="j0n-F9-6gE"/>
@@ -78,7 +78,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ro0-7V-UNL">
-                                <rect key="frame" x="256.5" y="20" width="154" height="30"/>
+                                <rect key="frame" x="110.5" y="40" width="154" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="01F-h7-tCe"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="154" id="cuP-7i-zQn"/>
@@ -92,7 +92,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMI-Jb-dWx">
-                                <rect key="frame" x="312.5" y="248" width="42" height="21"/>
+                                <rect key="frame" x="166.5" y="518" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -100,7 +100,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.12910864637305697" green="0.12910864637305697" blue="0.12910864637305697" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="orR-Nb-icn" secondAttribute="bottom" constant="8" id="0iP-7R-9tu"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="orR-Nb-icn" secondAttribute="bottom" constant="30" id="0iP-7R-9tu"/>
                             <constraint firstItem="orR-Nb-icn" firstAttribute="top" secondItem="GF0-OD-nYr" secondAttribute="bottom" constant="24" id="1RM-Kb-sIa"/>
                             <constraint firstAttribute="trailing" secondItem="orR-Nb-icn" secondAttribute="trailing" id="6fS-lf-SuO"/>
                             <constraint firstItem="orR-Nb-icn" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="6ic-Sp-VaJ"/>
